feat: 스터디룸 자치구, 요금별 필터링 적용